<resources>
    <string name="app_name">TIC TAC TOE XO</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="gamepvp_label">Game PVP</string>

    <string name="PLAY">PLAY</string>
    <string name="previous">Previous</string>

    <string name="Title1">TIC TAC TOE</string>
    <string name="Title2">XO</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <!--test: ca-app-pub-3940256099942544/6300978111-->
    <string name="ad_unit_id" translatable="false">ca-app-pub-8016302998575950/5379291019</string>
    <string name="leaderboard">LEADERBOARD</string>
    <string name="online">online</string>
    <string name="vs_computer">vs computer</string>
    <string name="_2_player">2 player</string>
    <string name="back">Back</string>
    <string name="matchmaking">matchmaking</string>
    <string name="profile">profile</string>


</resources>