<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/FirstFragment">

    <fragment
        android:id="@+id/FirstFragment"
        android:name="com.kalvinkao.tictactoe.FirstMenu"
        android:label="@string/first_fragment_label"
        tools:layout="@layout/fragment_menu"/>
    <fragment
        android:id="@+id/SecondFragment"
        android:name="com.kalvinkao.tictactoe.SecondMenu"
        android:label="@string/second_fragment_label"
        tools:layout="@layout/fragment_menu_two"/>
    <fragment
        android:id="@+id/gamePvP"
        android:name="com.kalvinkao.tictactoe.GamePVP"
        android:label="@string/gamepvp_label" />
</navigation>