<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/menubg"
    android:orientation="vertical"
    tools:context=".FirstMenu">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#5CFFFFFF"
        android:orientation="vertical"
        android:layout_margin="30dp">

        <TextView
            android:id="@+id/textview_first"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:shadowColor="@color/text_shadow"
            android:shadowDx="10"
            android:shadowDy="10"
            android:shadowRadius="1"
            android:text="@string/Title1"
            android:textAlignment="center"
            android:textColor="@android:color/background_light"
            android:textSize="50sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtviewsecond"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:shadowColor="@color/text_shadow"
            android:shadowDx="10"
            android:shadowDy="10"
            android:shadowRadius="1"
            android:text="@string/Title2"
            android:textAlignment="center"
            android:textColor="@android:color/background_light"
            android:textSize="100sp"
            android:textStyle="bold" />
    </LinearLayout>


    <Button
        android:id="@+id/button_first"
        android:layout_width="224dp"
        android:layout_height="68dp"
        android:layout_gravity="center"
        android:background="#FFFFFF"
        android:text="@string/PLAY"
        android:textSize="50sp" />

</LinearLayout>